--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -27,12 +27,19 @@ body {
 }
 
 h1 {
-  text-shadow: 3px 3px 6px rgb(245,113,18);
+  text-shadow: 3px 3px 0px rgb(245,113,18);
   font-size: 65px;
 }
 
 .card {
   color: black;
+  text-align: center;
+}
+
+.btn {
+  background-color: rgb(245,113,18);
+  color: white;
+  width: 150px;
 }
 
 #instructions {
@@ -71,6 +78,12 @@ h1 {
   }
   h1 {
     font-size: 18px;
+  }
+  #logo {
+    min-width: 400px;
+  }
+  #instructions {
+    max-width: 190px;
   }
 
 
