--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -14,40 +14,49 @@ body {
   box-sizing: inherit;
   position: relative;
   margin-bottom: 371px;
-  background-color: rgb(51,38,19);
+  background-color: rgb(233,236,239);
+  font-family: 'Rock Salt', cursive;
 }
 
 .jumbotron-fluid {
   color: white;
   padding: 4%;
-  border-bottom: 3px solid rgb(245,113,18);
+  border-bottom: 3px solid rgb(247,41,103);
   padding-bottom: 3%;
   background-color: rgb(5,133,123);
   width: 100%;
   margin-bottom: 50px;
+  background-image: url("https://media.giphy.com/media/b0I9c0NXRMS1W/giphy-downsized.gif");
 }
 
 h1 {
-  text-shadow: 3px 3px 0px rgb(245,113,18);
-  font-size: 65px;
+  text-shadow: 3px 3px 0px black;
+  font-size: 60px;
+  font-family: 'Rock Salt', cursive;
 }
 
 .card {
   color: black;
   text-align: center;
-  border: 3px solid rgb(5,133,123);
+  border: 3px solid rgb(247,41,103);
+  background-color: rgb(192,192,182);
 }
 
 .btn-jumbo {
-  background-color: rgb(245,113,18);
-  color: white;
+  background-color: rgb(192,192,182);
+  color: black;
   width: 150px;
+  margin-top: 20px;
 }
 
 .player-btn {
-  background-color: rgb(245,113,18);
+  background-color: rgb(31,25,47);
+  color: white;
 }
 
+.collapse {
+  margin-bottom: 10px;
+}
 
 #loop {
   border-radius: 50%;
@@ -75,8 +84,13 @@ h1 {
   margin-top:10%;
 }
 
+.frame {
+  border: 3px solid rgb(247,41,103);
+  margin-top: 10%;
+}
+
 #footer {
-  border-top: 3px solid rgb(245,113,18);
+  border-top: 3px solid rgb(247,41,103);
   background-color: #343a40;
   color: white;
   width: 100%;
@@ -87,9 +101,16 @@ h1 {
   text-align: center;
 }
 
+.copy {
+  font-family: serif;
+}
+
 @media (max-width: 480px) {
   #footer {
     bottom: -1000px;
+  }
+  body {
+
   }
   h1 {
     font-size: 32px;
@@ -100,8 +121,8 @@ h1 {
   #instructions {
     max-width: 190px;
   }
-  #loop {
-
+  .btn-jumbo {
+    font-size: 16px;
   }
 
 
